Hw_SumMatrices/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    close_braces
    colon
    end_if
    exit
    false
    goto
    open_braces
    semicolon
    true

Grammar

Rule 0     S' -> program
Rule 1     program -> inside_logic end
Rule 2     program -> inside_logic end subroutines
Rule 3     inside_logic -> variable inside_logic
Rule 4     inside_logic -> conditions inside_logic
Rule 5     inside_logic -> loops inside_logic
Rule 6     inside_logic -> calls inside_logic
Rule 7     inside_logic -> read_or_write inside_logic
Rule 8     inside_logic -> assign inside_logic
Rule 9     inside_logic -> <empty>
Rule 10    variable -> dim id as variable_type
Rule 11    variable -> dim id as variable_type open_brackets word_value close_brackets
Rule 12    variable -> dim id as variable_type open_brackets word_value close_brackets open_brackets word_value close_brackets
Rule 13    variable -> dim id as variable_type open_brackets word_value close_brackets open_brackets word_value close_brackets open_brackets word_value close_brackets
Rule 14    variable_type -> word
Rule 15    variable_type -> float
Rule 16    variable_type -> bool
Rule 17    conditions -> if open_parenthesis logic_expression close_parenthesis then ACTION_ADD_QUADRUPLET_EMPTY_JUMP inside_logic ACTION_NEW_IF ACTION_QUADRUPLET_EMPTY_JUMP_END_IF ACTION_FILL_JUMP end if ACTION_FILL_JUMP_END_IF
Rule 18    conditions -> if open_parenthesis logic_expression close_parenthesis then ACTION_ADD_QUADRUPLET_EMPTY_JUMP inside_logic ACTION_NEW_IF ACTION_QUADRUPLET_EMPTY_JUMP_END_IF else ACTION_FILL_JUMP inside_logic end if ACTION_FILL_JUMP_END_IF
Rule 19    conditions -> if open_parenthesis logic_expression close_parenthesis then ACTION_ADD_QUADRUPLET_EMPTY_JUMP inside_logic ACTION_NEW_IF ACTION_QUADRUPLET_EMPTY_JUMP_END_IF else_ifs end if ACTION_FILL_JUMP_END_IF
Rule 20    conditions -> if open_parenthesis logic_expression close_parenthesis then ACTION_ADD_QUADRUPLET_EMPTY_JUMP inside_logic ACTION_NEW_IF ACTION_QUADRUPLET_EMPTY_JUMP_END_IF else_ifs else ACTION_FILL_JUMP inside_logic end if ACTION_FILL_JUMP_END_IF
Rule 21    else_ifs -> elsif ACTION_FILL_JUMP open_parenthesis logic_expression close_parenthesis ACTION_ADD_QUADRUPLET_EMPTY_JUMP then inside_logic ACTION_QUADRUPLET_EMPTY_JUMP_END_IF
Rule 22    else_ifs -> else_ifs else_ifs
Rule 23    loops -> while open_parenthesis logic_expression close_parenthesis inside_logic wend
Rule 24    loops -> do inside_logic loop until open_parenthesis logic_expression close_parenthesis
Rule 25    loops -> for id ACTION_ADD_FOR_VALUE equals arithmetic_expression to arithmetic_expression step arithmetic_expression inside_logic next id
Rule 26    logic_expression -> arithmetic_expression
Rule 27    logic_expression -> logic_expression logic_operator logic_expression ACTION_ADD_QUADRUPLET
Rule 28    logic_expression -> open_parenthesis logic_expression close_parenthesis
Rule 29    logic_operator -> and ACTION_ADD_OPERATOR
Rule 30    logic_operator -> or ACTION_ADD_OPERATOR
Rule 31    logic_operator -> is_equal ACTION_ADD_OPERATOR
Rule 32    logic_operator -> is_not_equal ACTION_ADD_OPERATOR
Rule 33    logic_operator -> greater_than ACTION_ADD_OPERATOR
Rule 34    logic_operator -> greater_or_equal_than ACTION_ADD_OPERATOR
Rule 35    logic_operator -> less_than ACTION_ADD_OPERATOR
Rule 36    logic_operator -> less_or_equal_than ACTION_ADD_OPERATOR
Rule 37    arithmetic_expression -> value
Rule 38    arithmetic_expression -> arithmetic_expression arithmetic_operator value ACTION_ADD_QUADRUPLET
Rule 39    arithmetic_expression -> open_parenthesis arithmetic_expression close_parenthesis
Rule 40    arithmetic_operator -> sum ACTION_ADD_OPERATOR
Rule 41    arithmetic_operator -> substraction ACTION_ADD_OPERATOR
Rule 42    arithmetic_operator -> multiplication ACTION_ADD_OPERATOR
Rule 43    arithmetic_operator -> division ACTION_ADD_OPERATOR
Rule 44    arithmetic_operator -> exponent ACTION_ADD_OPERATOR
Rule 45    possible_values -> real_value
Rule 46    possible_values -> functions
Rule 47    possible_values -> ids_access
Rule 48    value -> possible_values
Rule 49    value -> not possible_values ACTION_ADD_NOT_OPERAND
Rule 50    value -> open_parenthesis value close_parenthesis
Rule 51    ids_access -> id ACTION_ADD_VAR_VALUE
Rule 52    ids_access -> id ACTION_ADD_VAR_VALUE open_brackets arithmetic_expression close_brackets ACTION_ADD_ONE_DIM_OPERAND
Rule 53    ids_access -> id ACTION_ADD_VAR_VALUE open_brackets arithmetic_expression close_brackets open_brackets arithmetic_expression close_brackets ACTION_ADD_TWO_DIM_OPERAND
Rule 54    ids_access -> id ACTION_ADD_VAR_VALUE open_brackets arithmetic_expression close_brackets open_brackets arithmetic_expression close_brackets open_brackets arithmetic_expression close_brackets ACTION_ADD_THREE_DIM_OPERAND
Rule 55    ids_access -> open_parenthesis ids_access close_parenthesis
Rule 56    real_value -> word_value ACTION_ADD_WORD_VALUE
Rule 57    real_value -> float_value ACTION_ADD_FLOAT_VALUE
Rule 58    real_value -> bool_value ACTION_ADD_BOOL_VALUE
Rule 59    real_value -> id ACTION_ADD_VAR_VALUE
Rule 60    calls -> gosub id
Rule 61    calls -> functions
Rule 62    subroutines -> sub procedure id inside_logic return subroutines
Rule 63    subroutines -> sub function id open_parenthesis close_parenthesis inside_logic end sub subroutines
Rule 64    subroutines -> sub function id open_parenthesis parameters close_parenthesis inside_logic end sub subroutines
Rule 65    subroutines -> sub function id open_parenthesis close_parenthesis as variable_type inside_logic end sub subroutines
Rule 66    subroutines -> sub function id open_parenthesis parameters close_parenthesis as variable_type inside_logic end sub subroutines
Rule 67    subroutines -> <empty>
Rule 68    assign -> let ids_access equals logic_expression
Rule 69    assign -> let ids_access equals arithmetic_expression
Rule 70    parameters -> variable
Rule 71    parameters -> parameters comma parameters
Rule 72    functions -> id ACTION_ADD_FUNCTION open_parenthesis close_parenthesis
Rule 73    functions -> id ACTION_ADD_FUNCTION open_parenthesis arguments ACTION_ADD_PARAMETERS close_parenthesis
Rule 74    arguments -> ByVal value ACTION_ADD_FUNCTION_OPERAND
Rule 75    arguments -> ByRef id ACTION_ADD_FUNCTION_OPERAND
Rule 76    arguments -> arguments comma arguments
Rule 77    read_or_write -> print
Rule 78    read_or_write -> read
Rule 79    read_or_write -> dunkelCls
Rule 80    print -> dunkelPrint multiple_print
Rule 81    print -> dunkelPrint open_parenthesis multiple_print close_parenthesis
Rule 82    multiple_print -> string
Rule 83    multiple_print -> arithmetic_expression
Rule 84    multiple_print -> multiple_print comma multiple_print
Rule 85    read -> dunkelRead multiple_read
Rule 86    read -> dunkelRead string comma multiple_read
Rule 87    multiple_read -> ids_access
Rule 88    multiple_read -> multiple_read comma ids_access
Rule 89    ACTION_ADD_FOR_VALUE -> <empty>
Rule 90    ACTION_ADD_VAR_VALUE -> <empty>
Rule 91    ACTION_ADD_WORD_VALUE -> <empty>
Rule 92    ACTION_ADD_FLOAT_VALUE -> <empty>
Rule 93    ACTION_ADD_BOOL_VALUE -> <empty>
Rule 94    ACTION_ADD_OPERATOR -> <empty>
Rule 95    ACTION_ADD_FUNCTION_OPERAND -> <empty>
Rule 96    ACTION_ADD_FUNCTION -> <empty>
Rule 97    ACTION_ADD_PARAMETERS -> <empty>
Rule 98    ACTION_ADD_NOT_OPERAND -> <empty>
Rule 99    ACTION_ADD_QUADRUPLET -> <empty>
Rule 100   ACTION_ADD_ONE_DIM_OPERAND -> <empty>
Rule 101   ACTION_ADD_TWO_DIM_OPERAND -> <empty>
Rule 102   ACTION_ADD_THREE_DIM_OPERAND -> <empty>
Rule 103   ACTION_ADD_QUADRUPLET_EMPTY_JUMP -> <empty>
Rule 104   ACTION_NEW_IF -> <empty>
Rule 105   ACTION_QUADRUPLET_EMPTY_JUMP_END_IF -> <empty>
Rule 106   ACTION_FILL_JUMP -> <empty>
Rule 107   ACTION_FILL_JUMP_END_IF -> <empty>

Terminals, with rules where they appear

ByRef                : 75
ByVal                : 74
and                  : 29
as                   : 10 11 12 13 65 66
bool                 : 16
bool_value           : 58
close_braces         : 
close_brackets       : 11 12 12 13 13 13 52 53 53 54 54 54
close_parenthesis    : 17 18 19 20 21 23 24 28 39 50 55 63 64 65 66 72 73 81
colon                : 
comma                : 71 76 84 86 88
dim                  : 10 11 12 13
division             : 43
do                   : 24
dunkelCls            : 79
dunkelPrint          : 80 81
dunkelRead           : 85 86
else                 : 18 20
elsif                : 21
end                  : 1 2 17 18 19 20 63 64 65 66
end_if               : 
equals               : 25 68 69
error                : 
exit                 : 
exponent             : 44
false                : 
float                : 15
float_value          : 57
for                  : 25
function             : 63 64 65 66
gosub                : 60
goto                 : 
greater_or_equal_than : 34
greater_than         : 33
id                   : 10 11 12 13 25 25 51 52 53 54 59 60 62 63 64 65 66 72 73 75
if                   : 17 17 18 18 19 19 20 20
is_equal             : 31
is_not_equal         : 32
less_or_equal_than   : 36
less_than            : 35
let                  : 68 69
loop                 : 24
multiplication       : 42
next                 : 25
not                  : 49
open_braces          : 
open_brackets        : 11 12 12 13 13 13 52 53 53 54 54 54
open_parenthesis     : 17 18 19 20 21 23 24 28 39 50 55 63 64 65 66 72 73 81
or                   : 30
procedure            : 62
return               : 62
semicolon            : 
step                 : 25
string               : 82 86
sub                  : 62 63 63 64 64 65 65 66 66
substraction         : 41
sum                  : 40
then                 : 17 18 19 20 21
to                   : 25
true                 : 
until                : 24
wend                 : 23
while                : 23
word                 : 14
word_value           : 11 12 12 13 13 13 56

Nonterminals, with rules where they appear

ACTION_ADD_BOOL_VALUE : 58
ACTION_ADD_FLOAT_VALUE : 57
ACTION_ADD_FOR_VALUE : 25
ACTION_ADD_FUNCTION  : 72 73
ACTION_ADD_FUNCTION_OPERAND : 74 75
ACTION_ADD_NOT_OPERAND : 49
ACTION_ADD_ONE_DIM_OPERAND : 52
ACTION_ADD_OPERATOR  : 29 30 31 32 33 34 35 36 40 41 42 43 44
ACTION_ADD_PARAMETERS : 73
ACTION_ADD_QUADRUPLET : 27 38
ACTION_ADD_QUADRUPLET_EMPTY_JUMP : 17 18 19 20 21
ACTION_ADD_THREE_DIM_OPERAND : 54
ACTION_ADD_TWO_DIM_OPERAND : 53
ACTION_ADD_VAR_VALUE : 51 52 53 54 59
ACTION_ADD_WORD_VALUE : 56
ACTION_FILL_JUMP     : 17 18 20 21
ACTION_FILL_JUMP_END_IF : 17 18 19 20
ACTION_NEW_IF        : 17 18 19 20
ACTION_QUADRUPLET_EMPTY_JUMP_END_IF : 17 18 19 20 21
arguments            : 73 76 76
arithmetic_expression : 25 25 25 26 38 39 52 53 53 54 54 54 69 83
arithmetic_operator  : 38
assign               : 8
calls                : 6
conditions           : 4
else_ifs             : 19 20 22 22
functions            : 46 61
ids_access           : 47 55 68 69 87 88
inside_logic         : 1 2 3 4 5 6 7 8 17 18 18 19 20 20 21 23 24 25 62 63 64 65 66
logic_expression     : 17 18 19 20 21 23 24 27 27 28 68
logic_operator       : 27
loops                : 5
multiple_print       : 80 81 84 84
multiple_read        : 85 86 88
parameters           : 64 66 71 71
possible_values      : 48 49
print                : 77
program              : 0
read                 : 78
read_or_write        : 7
real_value           : 45
subroutines          : 2 62 63 64 65 66
value                : 37 38 50 74
variable             : 3 70
variable_type        : 10 11 12 13 65 66

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . inside_logic end
    (2) program -> . inside_logic end subroutines
    (3) inside_logic -> . variable inside_logic
    (4) inside_logic -> . conditions inside_logic
    (5) inside_logic -> . loops inside_logic
    (6) inside_logic -> . calls inside_logic
    (7) inside_logic -> . read_or_write inside_logic
    (8) inside_logic -> . assign inside_logic
    (9) inside_logic -> .
    (10) variable -> . dim id as variable_type
    (11) variable -> . dim id as variable_type open_brackets word_value close_brackets
    (12) variable -> . dim id as variable_type open_brackets word_value close_brackets open_brackets word_value close_brackets
    (13) variable -> . dim id as variable_type open_brackets word_value close_brackets open_brackets word_value close_brackets open_brackets word_value close_brackets
    (17) conditions -> . if open_parenthesis logic_expression close_parenthesis then ACTION_ADD_QUADRUPLET_EMPTY_JUMP inside_logic ACTION_NEW_IF ACTION_QUADRUPLET_EMPTY_JUMP_END_IF ACTION_FILL_JUMP end if ACTION_FILL_JUMP_END_IF
    (18) conditions -> . if open_parenthesis logic_expression close_parenthesis then ACTION_ADD_QUADRUPLET_EMPTY_JUMP inside_logic ACTION_NEW_IF ACTION_QUADRUPLET_EMPTY_JUMP_END_IF else ACTION_FILL_JUMP inside_logic end if ACTION_FILL_JUMP_END_IF
    (19) conditions -> . if open_parenthesis logic_expression close_parenthesis then ACTION_ADD_QUADRUPLET_EMPTY_JUMP inside_logic ACTION_NEW_IF ACTION_QUADRUPLET_EMPTY_JUMP_END_IF else_ifs end if ACTION_FILL_JUMP_END_IF
    (20) conditions -> . if open_parenthesis logic_expression close_parenthesis then ACTION_ADD_QUADRUPLET_EMPTY_JUMP inside_logic ACTION_NEW_IF ACTION_QUADRUPLET_EMPTY_JUMP_END_IF else_ifs else ACTION_FILL_JUMP inside_logic end if ACTION_FILL_JUMP_END_IF
    (23) loops -> . while open_parenthesis logic_expression close_parenthesis inside_logic wend
    (24) loops -> . do inside_logic loop until open_parenthesis logic_expression close_parenthesis
    (25) loops -> . for id ACTION_ADD_FOR_VALUE equals arithmetic_expression to arithmetic_expression step arithmetic_expression inside_logic next id
    (60) calls -> . gosub id
    (61) calls -> . functions
    (77) read_or_write -> . print
    (78) read_or_write -> . read
    (79) read_or_write -> . dunkelCls
    (68) assign -> . let ids_access equals logic_expression
    (69) assign -> . let ids_access equals arithmetic_expression
    (72) functions -> . id ACTION_ADD_FUNCTION open_parenthesis close_parenthesis
    (73) functions -> . id ACTION_ADD_FUNCTION open_parenthesis arguments ACTION_ADD_PARAMETERS close_parenthesis
    (80) print -> . dunkelPrint multiple_print
    (81) print -> . dunkelPrint open_parenthesis multiple_print close_parenthesis
    (85) read -> . dunkelRead multiple_read
    (86) read -> . dunkelRead string comma multiple_read

    end             reduce using rule 9 (inside_logic -> .)
    dim             shift and go to state 9
    if              shift and go to state 11
    while           shift and go to state 12
    do              shift and go to state 13
    for             shift and go to state 14
    gosub           shift and go to state 15
    dunkelCls       shift and go to state 19
    let             shift and go to state 20
    id              shift and go to state 10
    dunkelPrint     shift and go to state 21
    dunkelRead      shift and go to state 22

    program                        shift and go to state 1
    inside_logic                   shift and go to state 2
    variable                       shift and go to state 3
    conditions                     shift and go to state 4
    loops                          shift and go to state 5
    calls                          shift and go to state 6
    read_or_write                  shift and go to state 7
    assign                         shift and go to state 8
    functions                      shift and go to state 16
    print                          shift and go to state 17
    read                           shift and go to state 18

state 1

    (0) S' -> program .



state 2

    (1) program -> inside_logic . end
    (2) program -> inside_logic . end subroutines

    end             shift and go to state 23


state 3

    (3) inside_logic -> variable . inside_logic
    (3) inside_logic -> . variable inside_logic
    (4) inside_logic -> . conditions inside_logic
    (5) inside_logic -> . loops inside_logic
    (6) inside_logic -> . calls inside_logic
    (7) inside_logic -> . read_or_write inside_logic
    (8) inside_logic -> . assign inside_logic
    (9) inside_logic -> .
    (10) variable -> . dim id as variable_type
    (11) variable -> . dim id as variable_type open_brackets word_value close_brackets
    (12) variable -> . dim id as variable_type open_brackets word_value close_brackets open_brackets word_value close_brackets
    (13) variable -> . dim id as variable_type open_brackets word_value close_brackets open_brackets word_value close_brackets open_brackets word_value close_brackets
    (17) conditions -> . if open_parenthesis logic_expression close_parenthesis then ACTION_ADD_QUADRUPLET_EMPTY_JUMP inside_logic ACTION_NEW_IF ACTION_QUADRUPLET_EMPTY_JUMP_END_IF ACTION_FILL_JUMP end if ACTION_FILL_JUMP_END_IF
    (18) conditions -> . if open_parenthesis logic_expression close_parenthesis then ACTION_ADD_QUADRUPLET_EMPTY_JUMP inside_logic ACTION_NEW_IF ACTION_QUADRUPLET_EMPTY_JUMP_END_IF else ACTION_FILL_JUMP inside_logic end if ACTION_FILL_JUMP_END_IF
    (19) conditions -> . if open_parenthesis logic_expression close_parenthesis then ACTION_ADD_QUADRUPLET_EMPTY_JUMP inside_logic ACTION_NEW_IF ACTION_QUADRUPLET_EMPTY_JUMP_END_IF else_ifs end if ACTION_FILL_JUMP_END_IF
    (20) conditions -> . if open_parenthesis logic_expression close_parenthesis then ACTION_ADD_QUADRUPLET_EMPTY_JUMP inside_logic ACTION_NEW_IF ACTION_QUADRUPLET_EMPTY_JUMP_END_IF else_ifs else ACTION_FILL_JUMP inside_logic end if ACTION_FILL_JUMP_END_IF
    (23) loops -> . while open_parenthesis logic_expression close_parenthesis inside_logic wend
    (24) loops -> . do inside_logic loop until open_parenthesis logic_expression close_parenthesis
    (25) loops -> . for id ACTION_ADD_FOR_VALUE equals arithmetic_expression to arithmetic_expression step arithmetic_expression inside_logic next id
    (60) calls -> . gosub id
    (61) calls -> . functions
    (77) read_or_write -> . print
    (78) read_or_write -> . read
    (79) read_or_write -> . dunkelCls
    (68) assign -> . let ids_access equals logic_expression
    (69) assign -> . let ids_access equals arithmetic_expression
    (72) functions -> . id ACTION_ADD_FUNCTION open_parenthesis close_parenthesis
    (73) functions -> . id ACTION_ADD_FUNCTION open_parenthesis arguments ACTION_ADD_PARAMETERS close_parenthesis
    (80) print -> . dunkelPrint multiple_print
    (81) print -> . dunkelPrint open_parenthesis multiple_print close_parenthesis
    (85) read -> . dunkelRead multiple_read
    (86) read -> . dunkelRead string comma multiple_read

    end             reduce using rule 9 (inside_logic -> .)
    loop            reduce using rule 9 (inside_logic -> .)
    wend            reduce using rule 9 (inside_logic -> .)
    return          reduce using rule 9 (inside_logic -> .)
    else            reduce using rule 9 (inside_logic -> .)
    elsif           reduce using rule 9 (inside_logic -> .)
    next            reduce using rule 9 (inside_logic -> .)
    dim             shift and go to state 9
    if              shift and go to state 11
    while           shift and go to state 12
    do              shift and go to state 13
    for             shift and go to state 14
    gosub           shift and go to state 15
    dunkelCls       shift and go to state 19
    let             shift and go to state 20
    id              shift and go to state 10
    dunkelPrint     shift and go to state 21
    dunkelRead      shift and go to state 22

    variable                       shift and go to state 3
    inside_logic                   shift and go to state 24
    conditions                     shift and go to state 4
    loops                          shift and go to state 5
    calls                          shift and go to state 6
    read_or_write                  shift and go to state 7
    assign                         shift and go to state 8
    functions                      shift and go to state 16
    print                          shift and go to state 17
    read                           shift and go to state 18

state 4

    (4) inside_logic -> conditions . inside_logic
    (3) inside_logic -> . variable inside_logic
    (4) inside_logic -> . conditions inside_logic
    (5) inside_logic -> . loops inside_logic
    (6) inside_logic -> . calls inside_logic
    (7) inside_logic -> . read_or_write inside_logic
    (8) inside_logic -> . assign inside_logic
    (9) inside_logic -> .
    (10) variable -> . dim id as variable_type
    (11) variable -> . dim id as variable_type open_brackets word_value close_brackets
    (12) variable -> . dim id as variable_type open_brackets word_value close_brackets open_brackets word_value close_brackets
    (13) variable -> . dim id as variable_type open_brackets word_value close_brackets open_brackets word_value close_brackets open_brackets word_value close_brackets
    (17) conditions -> . if open_parenthesis logic_expression close_parenthesis then ACTION_ADD_QUADRUPLET_EMPTY_JUMP inside_logic ACTION_NEW_IF ACTION_QUADRUPLET_EMPTY_JUMP_END_IF ACTION_FILL_JUMP end if ACTION_FILL_JUMP_END_IF
    (18) conditions -> . if open_parenthesis logic_expression close_parenthesis then ACTION_ADD_QUADRUPLET_EMPTY_JUMP inside_logic ACTION_NEW_IF ACTION_QUADRUPLET_EMPTY_JUMP_END_IF else ACTION_FILL_JUMP inside_logic end if ACTION_FILL_JUMP_END_IF
    (19) conditions -> . if open_parenthesis logic_expression close_parenthesis then ACTION_ADD_QUADRUPLET_EMPTY_JUMP inside_logic ACTION_NEW_IF ACTION_QUADRUPLET_EMPTY_JUMP_END_IF else_ifs end if ACTION_FILL_JUMP_END_IF
    (20) conditions -> . if open_parenthesis logic_expression close_parenthesis then ACTION_ADD_QUADRUPLET_EMPTY_JUMP inside_logic ACTION_NEW_IF ACTION_QUADRUPLET_EMPTY_JUMP_END_IF else_ifs else ACTION_FILL_JUMP inside_logic end if ACTION_FILL_JUMP_END_IF
    (23) loops -> . while open_parenthesis logic_expression close_parenthesis inside_logic wend
    (24) loops -> . do inside_logic loop until open_parenthesis logic_expression close_parenthesis
    (25) loops -> . for id ACTION_ADD_FOR_VALUE equals arithmetic_expression to arithmetic_expression step arithmetic_expression inside_logic next id
    (60) calls -> . gosub id
    (61) calls -> . functions
    (77) read_or_write -> . print
    (78) read_or_write -> . read
    (79) read_or_write -> . dunkelCls
    (68) assign -> . let ids_access equals logic_expression
    (69) assign -> . let ids_access equals arithmetic_expression
    (72) functions -> . id ACTION_ADD_FUNCTION open_parenthesis close_parenthesis
    (73) functions -> . id ACTION_ADD_FUNCTION open_parenthesis arguments ACTION_ADD_PARAMETERS close_parenthesis
    (80) print -> . dunkelPrint multiple_print
    (81) print -> . dunkelPrint open_parenthesis multiple_print close_parenthesis
    (85) read -> . dunkelRead multiple_read
    (86) read -> . dunkelRead string comma multiple_read

    end             reduce using rule 9 (inside_logic -> .)
    loop            reduce using rule 9 (inside_logic -> .)
    wend            reduce using rule 9 (inside_logic -> .)
    return          reduce using rule 9 (inside_logic -> .)
    else            reduce using rule 9 (inside_logic -> .)
    elsif           reduce using rule 9 (inside_logic -> .)
    next            reduce using rule 9 (inside_logic -> .)
    dim             shift and go to state 9
    if              shift and go to state 11
    while           shift and go to state 12
    do              shift and go to state 13
    for             shift and go to state 14
    gosub           shift and go to state 15
    dunkelCls       shift and go to state 19
    let             shift and go to state 20
    id              shift and go to state 10
    dunkelPrint     shift and go to state 21
    dunkelRead      shift and go to state 22

    conditions                     shift and go to state 4
    inside_logic                   shift and go to state 25
    variable                       shift and go to state 3
    loops                          shift and go to state 5
    calls                          shift and go to state 6
    read_or_write                  shift and go to state 7
    assign                         shift and go to state 8
    functions                      shift and go to state 16
    print                          shift and go to state 17
    read                           shift and go to state 18

state 5

    (5) inside_logic -> loops . inside_logic
    (3) inside_logic -> . variable inside_logic
    (4) inside_logic -> . conditions inside_logic
    (5) inside_logic -> . loops inside_logic
    (6) inside_logic -> . calls inside_logic
    (7) inside_logic -> . read_or_write inside_logic
    (8) inside_logic -> . assign inside_logic
    (9) inside_logic -> .
    (10) variable -> . dim id as variable_type
    (11) variable -> . dim id as variable_type open_brackets word_value close_brackets
    (12) variable -> . dim id as variable_type open_brackets word_value close_brackets open_brackets word_value close_brackets
    (13) variable -> . dim id as variable_type open_brackets word_value close_brackets open_brackets word_value close_brackets open_brackets word_value close_brackets
    (17) conditions -> . if open_parenthesis logic_expression close_parenthesis then ACTION_ADD_QUADRUPLET_EMPTY_JUMP inside_logic ACTION_NEW_IF ACTION_QUADRUPLET_EMPTY_JUMP_END_IF ACTION_FILL_JUMP end if ACTION_FILL_JUMP_END_IF
    (18) conditions -> . if open_parenthesis logic_expression close_parenthesis then ACTION_ADD_QUADRUPLET_EMPTY_JUMP inside_logic ACTION_NEW_IF ACTION_QUADRUPLET_EMPTY_JUMP_END_IF else ACTION_FILL_JUMP inside_logic end if ACTION_FILL_JUMP_END_IF
    (19) conditions -> . if open_parenthesis logic_expression close_parenthesis then ACTION_ADD_QUADRUPLET_EMPTY_JUMP inside_logic ACTION_NEW_IF ACTION_QUADRUPLET_EMPTY_JUMP_END_IF else_ifs end if ACTION_FILL_JUMP_END_IF
    (20) conditions -> . if open_parenthesis logic_expression close_parenthesis then ACTION_ADD_QUADRUPLET_EMPTY_JUMP inside_logic ACTION_NEW_IF ACTION_QUADRUPLET_EMPTY_JUMP_END_IF else_ifs else ACTION_FILL_JUMP inside_logic end if ACTION_FILL_JUMP_END_IF
    (23) loops -> . while open_parenthesis logic_expression close_parenthesis inside_logic wend
    (24) loops -> . do inside_logic loop until open_parenthesis logic_expression close_parenthesis
    (25) loops -> . for id ACTION_ADD_FOR_VALUE equals arithmetic_expression to arithmetic_expression step arithmetic_expression inside_logic next id
    (60) calls -> . gosub id
    (61) calls -> . functions
    (77) read_or_write -> . print
    (78) read_or_write -> . read
    (79) read_or_write -> . dunkelCls
    (68) assign -> . let ids_access equals logic_expression
    (69) assign -> . let ids_access equals arithmetic_expression
    (72) functions -> . id ACTION_ADD_FUNCTION open_parenthesis close_parenthesis
    (73) functions -> . id ACTION_ADD_FUNCTION open_parenthesis arguments ACTION_ADD_PARAMETERS close_parenthesis
    (80) print -> . dunkelPrint multiple_print
    (81) print -> . dunkelPrint open_parenthesis multiple_print close_parenthesis
    (85) read -> . dunkelRead multiple_read
    (86) read -> . dunkelRead string comma multiple_read

    end             reduce using rule 9 (inside_logic -> .)
    loop            reduce using rule 9 (inside_logic -> .)
    wend            reduce using rule 9 (inside_logic -> .)
    return          reduce using rule 9 (inside_logic -> .)
    else            reduce using rule 9 (inside_logic -> .)
    elsif           reduce using rule 9 (inside_logic -> .)
    next            reduce using rule 9 (inside_logic -> .)
    dim             shift and go to state 9
    if              shift and go to state 11
    while           shift and go to state 12
    do              shift and go to state 13
    for             shift and go to state 14
    gosub           shift and go to state 15
    dunkelCls       shift and go to state 19
    let             shift and go to state 20
    id              shift and go to state 10
    dunkelPrint     shift and go to state 21
    dunkelRead      shift and go to state 22

    loops                          shift and go to state 5
    inside_logic                   shift and go to state 26
    variable                       shift and go to state 3
    conditions                     shift and go to state 4
    calls                          shift and go to state 6
    read_or_write                  shift and go to state 7
    assign                         shift and go to state 8
    functions                      shift and go to state 16
    print                          shift and go to state 17
    read                           shift and go to state 18

state 6

    (6) inside_logic -> calls . inside_logic
    (3) inside_logic -> . variable inside_logic
    (4) inside_logic -> . conditions inside_logic
    (5) inside_logic -> . loops inside_logic
    (6) inside_logic -> . calls inside_logic
    (7) inside_logic -> . read_or_write inside_logic
    (8) inside_logic -> . assign inside_logic
    (9) inside_logic -> .
    (10) variable -> . dim id as variable_type
    (11) variable -> . dim id as variable_type open_brackets word_value close_brackets
    (12) variable -> . dim id as variable_type open_brackets word_value close_brackets open_brackets word_value close_brackets
    (13) variable -> . dim id as variable_type open_brackets word_value close_brackets open_brackets word_value close_brackets open_brackets word_value close_brackets
    (17) conditions -> . if open_parenthesis logic_expression close_parenthesis then ACTION_ADD_QUADRUPLET_EMPTY_JUMP inside_logic ACTION_NEW_IF ACTION_QUADRUPLET_EMPTY_JUMP_END_IF ACTION_FILL_JUMP end if ACTION_FILL_JUMP_END_IF
    (18) conditions -> . if open_parenthesis logic_expression close_parenthesis then ACTION_ADD_QUADRUPLET_EMPTY_JUMP inside_logic ACTION_NEW_IF ACTION_QUADRUPLET_EMPTY_JUMP_END_IF else ACTION_FILL_JUMP inside_logic end if ACTION_FILL_JUMP_END_IF
    (19) conditions -> . if open_parenthesis logic_expression close_parenthesis then ACTION_ADD_QUADRUPLET_EMPTY_JUMP inside_logic ACTION_NEW_IF ACTION_QUADRUPLET_EMPTY_JUMP_END_IF else_ifs end if ACTION_FILL_JUMP_END_IF
    (20) conditions -> . if open_parenthesis logic_expression close_parenthesis then ACTION_ADD_QUADRUPLET_EMPTY_JUMP inside_logic ACTION_NEW_IF ACTION_QUADRUPLET_EMPTY_JUMP_END_IF else_ifs else ACTION_FILL_JUMP inside_logic end if ACTION_FILL_JUMP_END_IF
    (23) loops -> . while open_parenthesis logic_expression close_parenthesis inside_logic wend
    (24) loops -> . do inside_logic loop until open_parenthesis logic_expression close_parenthesis
    (25) loops -> . for id ACTION_ADD_FOR_VALUE equals arithmetic_expression to arithmetic_expression step arithmetic_expression inside_logic next id
    (60) calls -> . gosub id
    (61) calls -> . functions
    (77) read_or_write -> . print
    (78) read_or_write -> . read
    (79) read_or_write -> . dunkelCls
    (68) assign -> . let ids_access equals logic_expression
    (69) assign -> . let ids_access equals arithmetic_expression
    (72) functions -> . id ACTION_ADD_FUNCTION open_parenthesis close_parenthesis
    (73) functions -> . id ACTION_ADD_FUNCTION open_parenthesis arguments ACTION_ADD_PARAMETERS close_parenthesis
    (80) print -> . dunkelPrint multiple_print
    (81) print -> . dunkelPrint open_parenthesis multiple_print close_parenthesis
    (85) read -> . dunkelRead multiple_read
    (86) read -> . dunkelRead string comma multiple_read

    end             reduce using rule 9 (inside_logic -> .)
    loop            reduce using rule 9 (inside_logic -> .)
    wend            reduce using rule 9 (inside_logic -> .)
    return          reduce using rule 9 (inside_logic -> .)
    else            reduce using rule 9 (inside_logic -> .)
    elsif           reduce using rule 9 (inside_logic -> .)
    next            reduce using rule 9 (inside_logic -> .)
    dim             shift and go to state 9
    if              shift and go to state 11
    while           shift and go to state 12
    do              shift and go to state 13
    for             shift and go to state 14
    gosub           shift and go to state 15
    dunkelCls       shift and go to state 19
    let             shift and go to state 20
    id              shift and go to state 10
    dunkelPrint     shift and go to state 21
    dunkelRead      shift and go to state 22

    calls                          shift and go to state 6
    inside_logic                   shift and go to state 27
    variable                       shift and go to state 3
    conditions                     shift and go to state 4
    loops                          shift and go to state 5
    read_or_write                  shift and go to state 7
    assign                         shift and go to state 8
    functions                      shift and go to state 16
    print                          shift and go to state 17
    read                           shift and go to state 18

state 7
